Layout CCS improvements to the http://www.nmr-relax.com/links.html page.

--- a/links.html
+++ b/links.html
@@ -14,6 +14,7 @@
 
 <head>
   <title>relax links</title>
+  <link rel="stylesheet" type="text/css" href="relax.css"/>
   <!--#include virtual="head.html" -->
 </head>
 
@@ -36,48 +37,48 @@
       <td><strong>Description</strong></td>
       <td><strong>Where to find relax</strong></td>
     </tr>
-    <tr>
-      <td><a href="http://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
       <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The relax developer Gna! pages are (in alphabetical order):  <a href="http://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="http://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="http://gna.org/users/macraild">Chris MacRaild</a>, <a href="http://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="http://gna.org/users/pansapiens">Andrew Perry</a>, <a href="http://gna.org/users/han87">Han Sun</a>, <a href="http://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
     </tr>
-    <tr>
-      <td><a href="http://gmane.org/find.php?list=nmr.relax"><img src="images/gmane-50.png" alt="Gmane logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://gmane.org/find.php?list=nmr.relax"><img src="images/gmane-50.png" alt="Gmane logo" class="image"/></a></td>
       <td>The Gmane mailing list archive.</td>
       <td>The archived relax mailing lists include relax-announce (<a href="http://news.gmane.org/gmane.science.nmr.relax.announce">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.announce">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.announce">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.announce">RSS</a>), relax-users (<a href="http://news.gmane.org/gmane.science.nmr.relax.user">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.user">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.user">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.user">RSS</a>), relax-devel (<a href="http://news.gmane.org/gmane.science.nmr.relax.devel">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.devel">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.devel">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.devel">RSS</a>), and relax-commits (<a href="http://news.gmane.org/gmane.science.nmr.relax.scm">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.scm">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.scm">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.scm">RSS</a>).</td>
     </tr>
-    <tr>
-      <td><a href="http://mail-archive.com/find.php?&q=relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://mail-archive.com/find.php?&q=relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
-     <tr>
-      <td><a href="http://freecode.com/projects/nmr-relax"><img src="images/fmlogo.png" alt="Freecode logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://freecode.com/projects/nmr-relax"><img src="images/freecode.png" alt="Freecode logo" class="image"/></a></td>
       <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
       <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a>.</td>
     </tr>
-    <tr>
-      <td><a href="http://cia.vc/stats/project/relax"><img src="images/banner-70-nb.png" alt="Freshmeat logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://cia.vc/stats/project/relax"><img src="images/cia_vc_small.png" alt="Cia.vc logo" class="image"/></a></td>
       <td>The open source informant.  CIA tracks open source projects in real-time.</td>
       <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
-    <tr>
-      <td><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/Top_Logo.gif" alt="LinuxLinks logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
-    <tr>
-      <td><a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/"><img src="images/lizard4.gif" alt="DMOZ Open Directoyr Project logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/"><img src="images/dmoz.gif" alt="DMOZ Open Directory Project logo" class="image"/></a></td>
       <td>The DMOZ Open Directory Project.</td>
       <td>On the <a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/">Top : Science : Chemistry : Nuclear Magnetic Resonance : Software</a> page.</td>
     </tr>
-    <tr>
-      <td><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
       <td>Softpedia is the encyclopedia of free software downloads.</td>
       <td>The relax page on Softpedia is <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">http://linux.softpedia.com/get/Science/relax-22351.shtml</a>.  The relax developers pages are:  <a href="http://linux.softpedia.com/developer/Edward-d-039-Auvergne-5136.html">Edward d&#39;Auvergne</a>.</td>
     </tr>
-    <tr>
-      <td><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100"><img src="images/pl-logo.png" alt="Pro-Linux.de logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100"><img src="images/prolinux_small.png" alt="Pro-Linux.de logo" class="image"/></a></td>
       <td>Pro-Linux ist eine der gr&#246;&#223;ten deutschsprachigen Seiten zum Thema Linux.</td>
       <td>The relax page is <a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100">http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100</a>.</td>
     </tr>
@@ -94,8 +95,8 @@
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
     </tr>
-    <tr>
-      <td><a href="http://home.gna.org/nessy"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
+    <tr class="link_tr">
+      <td class="link_logo_td"><a href="http://home.gna.org/nessy"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
     </tr>
   </tbody>
