Updated the CIA.vc description on http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -59,7 +59,7 @@
     </tr>
     <tr class="link_tr">
       <td class="link_logo_td"><a href="http://cia.vc/stats/project/relax"><img src="images/cia_vc_small.png" alt="Cia.vc logo" class="image"/></a></td>
-      <td>The open source informant.  CIA tracks open source projects in real-time.</td>
+      <td>The open source version control informant.  CIA tracks open source projects in real-time.</td>
       <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr class="link_tr">
