--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
     </tr>
     <tr class="link_tr">
       <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
-      <td>LinuxLinks.com is a website listing many Linux software projects.</td>
+      <td>LinuxLinks.com, the Linux portal, is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
     <tr class="link_tr">
