HTML fixes for the http://www.nmr-relax.com/links.html page.
These were identified by the W3C validator.

--- a/links.html
+++ b/links.html
@@ -41,7 +41,7 @@
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
      </ul></li>
-    <li><a href="links.html#Protein_dynamics">Protein dynamics</a></li>
+    <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
      <ul>
       <li><a href="links.html#Nessy">NESSY</a></li>
      </ul></li>
@@ -69,7 +69,7 @@
       <td>The archived relax mailing lists include relax-announce (<a href="http://news.gmane.org/gmane.science.nmr.relax.announce">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.announce">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.announce">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.announce">RSS</a>), relax-users (<a href="http://news.gmane.org/gmane.science.nmr.relax.user">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.user">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.user">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.user">RSS</a>), relax-devel (<a href="http://news.gmane.org/gmane.science.nmr.relax.devel">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.devel">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.devel">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.devel">RSS</a>), and relax-commits (<a href="http://news.gmane.org/gmane.science.nmr.relax.scm">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.scm">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.scm">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.scm">RSS</a>).</td>
     </tr>
     <tr id="Mail_archive" class="link_tr">
-      <td class="link_logo_td"><a href="http://mail-archive.com/find.php?&q=relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://mail-archive.com/find.php&#63;&#38;q&#61;relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
