Added a top menu to the http://www.nmr-relax.com/features.html page.

--- a/features.html
+++ b/features.html
@@ -24,19 +24,26 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
- <div class="main_box">
-  <h1>Program features</h1>
+<!-- Index -->
+  <div class="main_box">
+    <h1>Program features</h1>
 
-   <p></p>
+    <ul>
+      <li><a href="features.html#primary_refs">Literature</a></li>
+      <li><a href="features.html#theories">Supported NMR theories</a></li>
+      <li><a href="features.html#tools">Data analysis tools</a></li>
+      <li><a href="features.html#vis">Data visualisation</a></li>
+      <li><a href="features.html#interface">Interfacing with other programs</a></li>
+      <li><a href="features.html#UI">The user interfaces (UI)</a></li>
+    </ul>
+  </div>
 
-  <div class="main_h2" id="primary_refs">
+  <div class="main_box" id="primary_refs">
    <h2>Literature</h2>
     <p>The primary references for the program relax are <a href="refs.html#dAuvergneGooley08a">d'Auvergne and Gooley, 2008a</a> and <a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>.</p>
 
     <p>Other literature related to the improved model-free analysis used within relax, which can nevertheless be applied to other techniques, include model-free model selection (<a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>; <a href="refs.html#Chen04">Chen et al., 2004</a>), model-free model elimination (<a href="refs.html#dAuvergneGooley06">d'Auvergne and Gooley, 2006</a>), the theory (<a href="refs.html#dAuvergneGooley07">d'Auvergne and Gooley, 2007</a>) behind the new model-free optimisation protocol (<a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>), and the hybridisation of different models (<a href="refs.html#Horne07">Horne et al., 2007</a>; <a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>).  Most of these details can be found in the PhD thesis of <a href="refs.html#dAuvergne06">d'Auvergne, 2006</a>.</p>
 
-
-  </div>
 
   <div class="main_h2" id="theories">
    <h2>Supported NMR theories</h2>
