Added a top menu to the http://www.nmr-relax.com/screenshots.html page.

--- a/screenshots.html
+++ b/screenshots.html
@@ -24,8 +24,17 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
- <div class="main_box">
-  <h1>Screenshots</h1>
+<!-- Index -->
+  <div class="main_box">
+    <h1>Screenshots</h1>
+
+    <ul>
+      <li><a href="screenshots.html#prompt">Prompt UI screenshots</a></li>
+      <li><a href="screenshots.html#gui">GUI screenshots</a></li>
+    </ul>
+  </div>
+
+ <div id="prompt" class="main_box">
 
    <h2>Prompt UI screenshots</h2>
 
@@ -56,6 +65,7 @@
       </tr>
      </table>
 
+  <div id="gui" class="main_h2">
    <h2>GUI screenshots</h2>
 
     <h3>relax 1.3.14</h3>
@@ -118,6 +128,7 @@
       </tr>
      </table>
 
+  </div>
  </div>
 </div>
 
