--- a/communication.html
+++ b/communication.html
@@ -23,7 +23,25 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
+<!-- Index -->
   <div class="main_box">
+    <h1>Interacting with the relax community</h1>
+
+    <ul>
+     <li><a href="communication.html#bug_tracker">Bug Tracker</a></li>
+     <li><a href="communication.html#mailing-lists">Mailing lists</a>
+     <ul>
+      <li><a href="communication.html#relax-announce">relax-announce</a></li>
+      <li><a href="communication.html#relax-users">relax-users</a></li>
+      <li><a href="communication.html#relax-devel">relax-devel</a></li>
+      <li><a href="communication.html#relax-commits">relax-commits</a></li>
+      <li><a href="communication.html#response">Responding to messages</a></li>
+      <li><a href="communication.html#mailing_list_search">Searching the mailing lists</a></li>
+     </ul></li>
+    </ul>
+  </div>
+
+  <div id="bug_tracker" class="main_box">
     <h1>Bug Tracker</h1>
 
     <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&amp;func=additem" title="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
@@ -98,7 +116,7 @@
      </ul>
      </div>
 
-    <div class="main_h2">
+    <div id="response" class="main_h2">
      <h2>Responding to messages</h2>
       <p>Remember to hit 'respond to all' so that the mailing list is included in the CC field when replying to a message on these lists.  Otherwise your message will only be sent to the original poster and will not return to the list.  Posts will only be accepted if sent to the relax-users or relax-devel mailing lists.</p>
     </div>
