HTML fixes for the http://www.nmr-relax.com/events.html page.
The problems were found using the W3C validator.

--- a/events.html
+++ b/events.html
@@ -27,6 +27,7 @@
   <div class="main_box">
   <h1>Events</h1>
 
+
     <p>Here is a list of events where relax was presented.</p>
 
   <div class="main_h2">
@@ -35,7 +36,7 @@
     <table cellpadding="10">
       <tbody>
         <tr>
-          <td colspan="5"><font size="+1"><strong>2004 ANZMAG</strong></font></td>
+          <td class="table_title" colspan="5"><strong>2004 ANZMAG</strong></td>
         </tr>
         <tr>
           <td><a href="http://www.anzmag.com.au/conferences.php"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
@@ -49,7 +50,7 @@
         </tr>
 
         <tr>
-          <td colspan="5"><font size="+1"><strong>2006 ICMRBS</strong></font></td>
+          <td class="table_title" colspan="5"><strong>2006 ICMRBS</strong></td>
         </tr>
         <tr>
           <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
@@ -63,7 +64,7 @@
         </tr>
 
         <tr>
-          <td colspan="5"><font size="+1"><strong>2009 ENC</strong></font></td>
+          <td class="table_title" colspan="5"><strong>2009 ENC</strong></td>
         </tr>
         <tr>
           <td><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
@@ -78,7 +79,7 @@
         </tr>
 
         <tr>
-          <td colspan="5"><font size="+1"><strong>2009 MOOT</strong></font></td>
+          <td class="table_title" colspan="5"><strong>2009 MOOT</strong></td>
         </tr>
         <tr>
           <td><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
@@ -95,13 +96,11 @@
 
 
     <div class="main_h2">
-    <h2>Disclaimer</h2>
+     <h2>Disclaimer</h2>
 
-    <p>These documents shall be re-used with permission from the authors.</p>
+     <p>These documents shall be re-used with permission from the authors.</p>
 
-  </div>
-  </div>
-  </div>
+    </div>
   </div>
 </div>
 
