Small fix for the http://www.nmr-relax.com/features.html page.

--- a/features.html
+++ b/features.html
@@ -34,7 +34,7 @@
       <li><a href="features.html#tools">Data analysis tools</a></li>
       <li><a href="features.html#vis">Data visualisation</a></li>
       <li><a href="features.html#interface">Interfacing with other programs</a></li>
-      <li><a href="features.html#UI">The user interfaces (UI)</a></li>
+      <li><a href="features.html#UI">The user interfaces (UIs)</a></li>
     </ul>
   </div>
 
@@ -109,7 +109,7 @@ used as optimisation engines replacing the minimisation algorithms built into re
   </div>
 
   <div class="main_h2" id="UI">
-   <h2>The user interfaces (UI)</h2>
+   <h2>The user interfaces (UIs)</h2>
     <p>relax can be used through the following UIs:</p>
 
     <ul>
