Updated the manual section of the documentation webpage (http://www.nmr-relax.com/docs.html).

--- a/docs.html
+++ b/docs.html
@@ -49,9 +49,13 @@
   <div class="main_h2">
     <h2>The manual</h2>
 
-    <p>Finally, the best source of information is the current version of the relax manual which is distributed with relax.  It is available as a high quality <a href="http://download.gna.org/relax/manual/relax.pdf">PDF manual</a>, and it has also been converted into a <a href="manual/relax.html">HTML version</a> which can be browsed on-line.  The HTML version is, however, inferior in quality in comparison to the original PDF.</p>
+    <p>The best source of information is the current version of the relax user manual which is distributed with relax.  It is available as both a high quality PDF and a HTML version which can be browsed online:</p>
+    <ul>
+        <li><a href="manual/relax.html">HTML manual</a></li>
+        <li><a href="http://download.gna.org/relax/manual/relax.pdf">PDF manual</a></li>
+    </ul>
 
-    <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
+    <p>You can also search through the HTML versions of the manuals using the Google search tool:</p>
 
     <!-- SiteSearch Google -->
     <form method="get" action="http://www.google.com/search">
