Fixed the link to the HTML manual on the documentation webpage (http://www.nmr-relax.com/manual/relax.html).

--- a/docs.html
+++ b/docs.html
@@ -51,7 +51,7 @@
 
     <p>The best source of information is the current version of the relax user manual which is distributed with relax.  It is available as both a high quality PDF and a HTML version which can be browsed online:</p>
     <ul>
-        <li><a href="manual/relax.html">HTML manual</a></li>
+        <li><a href="manual/index.html">HTML manual</a></li>
         <li><a href="http://download.gna.org/relax/manual/relax.pdf">PDF manual</a></li>
     </ul>
 
