More http://www.nmr-relax.com/download.html webpage updates for relax 2.0.0.

--- a/download.html
+++ b/download.html
@@ -82,10 +82,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.16.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>144459debbbb6bce6581bcb65245321f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>20248226</td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>7e7b9bc5be6184e11063e0f53708a79b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>21491773</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
@@ -125,10 +125,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Win32.zip" title="relax">relax-1.3.16.Win32.zip</a></td>
-      <td><tt><small>8bab117103e40b6e317ea928424f0a57</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>22280183</td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip" title="relax">relax-2.0.0.Win32.zip</a></td>
+      <td><tt><small>a847e815bb3a24a5a3c1a33485374d7d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>23546121</td>
     </tr>
   </tbody>
 </table>
@@ -267,11 +267,11 @@
 
     <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
 
-    <p><em>> svn co svn://svn.gna.org/svn/relax/1.3 ./relax-1.3</em></p>
+    <p><em>> svn co svn://svn.gna.org/svn/relax/trunk ./relax-trunk</em></p>
 
     <p>or:</p>
 
-    <p><em>> svn co http://svn.gna.org/svn/relax/1.3 ./relax-1.3</em></p>
+    <p><em>> svn co http://svn.gna.org/svn/relax/trunk ./relax-trunk</em></p>
 
     <p>The code obtained from the repository is the most up-to-date (and sometimes evolves quite rapidly). To keep up with changes, the <a href="http://subversion.tigris.org/">Subversion</a> update command must be used:</p>
 
@@ -324,10 +324,22 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2348">Version 2.0.0</a> (2012-06-12)</em></td></tr>
     <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>7e7b9bc5be6184e11063e0f53708a79b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>21491773</td>
+    </tr>
+    <tr>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>9a09bb45c9d50a1de01efde0e3efb7c2</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>21503597</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip" title="relax">relax-2.0.0.Win32.zip</a></td>
+      <td><tt><small>a847e815bb3a24a5a3c1a33485374d7d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>23546121</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2" title="relax">relax-2.0.0.src.tar.bz2</a></td>
